tests/negative/runtime/shift_negative/input.ci
void main() {
    int x = 1 << -1;
    print(toString(x) + "\n");
}
